--- a/Resume.html
+++ b/Resume.html
@@ -285,7 +285,7 @@
 		<h1> Vecheka Chhourn </h1>
 		<hr></hr>
 		<p> Welcome To My Resume's Site</p>
-		<a id ="downloadResume" href="resume/resume.docx"> Download Resume<img src="images/downloadIcon.png"/>  </a>
+		<a id ="downloadResume" href="resume/VechekaResume(New Version).docx"> Download Resume<img src="images/downloadIcon.png"/>  </a>
 		
 	</div>
 
